data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2213.wast
;; 3. **Branching with Mismatched Operand Types**:    - Use `br_table` in a loop with labels having mismatched operand types to the provided operand from the stack. Check the compliance of type constraints for forwarding or backward branching. Misinterpreting operand types could result in an unintended infinite execution path.

(assert_invalid
  (module
    (func
      (loop
        (block (result i32)
          (block (result f32)
            (br_table 0 1 (i32.const 0) (i32.const 1))
          )
        )
      )
    )
  )
  "type mismatch"
)